--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@ngrx/store": "^12.4.0",
     "@ngrx/store-devtools": "^12.4.0",
     "bootstrap": "^5.1.0",
+    "chart.js": "^2.9.3",
     "firebase": "9.0.0-202171919375",
     "fs-extra": "^10.0.0",
+    "ng2-charts": "^2.2.3",
     "rxfire": "6.0.0-rc.0",
     "rxjs": "~6.5.5",
     "sweetalert2": "^11.1.4",
